[sil_hmd_plrd] Update to keyboard

--- a/release/sil/sil_hmd_plrd/source/welcome/welcome.htm
+++ b/release/sil/sil_hmd_plrd/source/welcome/welcome.htm
@@ -13,15 +13,21 @@
 
 <h1>Start Using Ahmao (SIL)</h1>
 
-<p>This keyboard was designed for the Ahmao [hmd] language using the Miao script. A font must be installed to support this keyboard. A Miao font specifically designed for use with the hmd language is available here: <a href="http://software.sil.org/shimenkan/">http://software.sil.org/shimenkan/</a>. The Sapushan font is also packaged with this keyboard.</p>
+<p>This keyboard was designed for the Ahmao [hmd] language using the Miao script. The keyboard supports both the Augmented Traditional character set as well as the Normalised character set. A font must be installed to support this keyboard. A Miao font specifically designed for use with the hmd language is available here: <a href="http://software.sil.org/shimenkan/">http://software.sil.org/shimenkan/</a>. The Sapushan font is also packaged with this keyboard.</p>
 
+<p>TR outputs MIAO TONE RIGHT</p>
+<p>TTR outputs MIAO TONE TOP RIGHT</p>
+<p>TA outputs MIAO TONE ABOVE</p>
 
   <h2>Keyboard layout</h2>
 	<h3>Default (unshifted)</h3>
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<h3>Right ALT</h3>
+	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="RALT state" /></a></p>
 
+  <p>The mobile layout uses longpress keys to access the warted characters as well as some of the other characters.</p>
 
 </body>
 </html>
