--- a/release/sil/sil_hmd_plrd/source/readme.htm
+++ b/release/sil/sil_hmd_plrd/source/readme.htm
@@ -14,7 +14,7 @@
 <h1>Ahmao (SIL)</h1>
 
 
-<p>This keyboard was designed for the Ahmao [hmd] language using the Miao script. A font must be installed to support this keyboard. A Miao font specifically designed for use with the hmd language is available here: <a href="http://software.sil.org/shimenkan/">http://software.sil.org/shimenkan/</a>. The Sapushan font is also packaged with this keyboard.</p>
+<p>This keyboard was designed for the Ahmao [hmd] language using the Miao script. The keyboard supports both the Augmented Traditional character set as well as the Normalised character set. A font must be installed to support this keyboard. A Miao font specifically designed for use with the hmd language is available here: <a href="http://software.sil.org/shimenkan/">http://software.sil.org/shimenkan/</a>. The Sapushan font is also packaged with this keyboard.</p>
 
 
 
