ready for review
cantonese telex keyboard, ready for review

--- a/release/c/cantonese_telex/source/readme.htm
+++ b/release/c/cantonese_telex/source/readme.htm
@@ -15,12 +15,18 @@
 <h1>Cantonese Telex</h1>
 
 <p>
-    cantonese telex for Yụt Yũ (Cantonese). Cantonese Telex粵語電報式羅馬字輸入法
+    cantonese telex for Yuẹt Yữ Gwók Yữ Zị (Cantonese).
+</p>
+<p>
+    Cantonese Telex粵語國語字輸入法
 </p>
 
 <p> e-mail: goetiansoc@proton.me</p>
 
 <p> telegram: https://t.me/cathaylab</p>
+<p> instagram for publisher: cathay_lab2024 </p>
+<p> instagram for Yuẹt Yữ Gwók Yữ Zị program: cantonese_chuquocngu</p>
+
 <p>© cathaylab</p>
 </body>
 </html>
