--- a/release/gautami/gautami_inditran/source/welcome/welcome.htm
+++ b/release/gautami/gautami_inditran/source/welcome/welcome.htm
@@ -31,8 +31,7 @@
 
 <p><b>To access IPA transcription symbols press [\] after typing any base character, e.g. &nbsp a [\] > ə, &nbsp ə [\] > ɑ, <br> ɑ [\] > ä.</b></p>
 
-<p><a href="transcrip.png"><span style='text-decoration:none'><img border=3
-img width=90% src="transcrip.png" alt="Transcription Keymap"></span></a></p>
+<p><a href="transcrip.png"><span style='text-decoration:none'><img border=3 img width=90% src="transcrip.png" alt="Transcription Keymap"></span></a></p>
 <p><b>Pressing down and holding the Right-Alt key switches the keyboard back to its original QWERTY <br> configuration</b>, e.g. [o~] > õ, but typing o and then holding down the Right-Alt key while typing ~ yields o~.</p>
 <br> 
 </body>
