[Lisu] Update 4 Lisu keyboards to remove lbc and update other tags

--- a/release/basic/basic_kbdlisub/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdlisub/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Lisu (Basic) Basic</h1>
 
 <p>
-    Lisu (Basic) Basic 1.0.1 generated from template.
+  This keyboard is designed for languages using the Lisu script.
 </p>
 
 <h1>Keyboard Layout</h1>
@@ -25,8 +25,6 @@
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
 
-
-<p>(c) 2018 SIL International</p>
 
 </body>
 </html>
