--- a/release/basic/basic_kbdlisus/source/readme.htm
+++ b/release/basic/basic_kbdlisus/source/readme.htm
@@ -14,11 +14,9 @@
 <h1>Lisu (Standard) Basic</h1>
 
 <p>
-    Lisu (Standard) Basic 1.0.1 generated from template.
+  This keyboard is designed for languages using the Lisu script.
 </p>
 <p>A font must be installed to support this keyboard. Windows includes the <b>Segoe UI</b> font which supports the <b>Lisu</b> script.</p>
-
-<p>(c) 2018 SIL International</p>
 
 </body>
 </html>
