--- a/release/basic/basic_kbdlisub/source/readme.htm
+++ b/release/basic/basic_kbdlisub/source/readme.htm
@@ -14,10 +14,8 @@
 <h1>Lisu (Basic) Basic</h1>
 
 <p>
-    Lisu (Basic) Basic 1.0 generated from template.
+  This keyboard is designed for languages using the Lisu script.
 </p>
-
-<p>(c) 2018 SIL International</p>
 
 </body>
 </html>
