--- a/release/basic/basic_kbdlisus/source/welcome/welcome.htm
+++ b/release/basic/basic_kbdlisus/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Lisu (Standard) Basic</h1>
 
 <p>
-    Lisu (Standard) Basic 1.0 generated from template.
+  This keyboard is designed for languages using the Lisu script.
 </p>
 <p>A font must be installed to support this keyboard. Windows includes the <b>Segoe UI</b> font which supports the <b>Lisu</b> script.</p>
 
@@ -24,8 +24,6 @@
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
 
-
-<p>(c) 2018 SIL International</p>
 
 </body>
 </html>
