[Syriac] Update 3 Syriac keyboards and one package to update language tags

--- a/release/packages/syriac_aramaic/source/welcome/syriac_phonetic-welcome.htm
+++ b/release/packages/syriac_aramaic/source/welcome/syriac_phonetic-welcome.htm
@@ -84,8 +84,7 @@ table.display { border-collapse: collapse; }
     </style>
 </head>
 <body>
-<h1 style='margin-bottom: 2px'>Syriac (Phonetic layout) Keyboard</h1>
-<p style='margin-top: 2px'><i>&copy; SIL International</i></p>
+<h1>Syriac (Phonetic layout) Keyboard</h1>
 
 <p>The Syriac (Phonetic layout) keyboard is based on standard Syriac keyboards.  </p>
 
