--- a/release/s/syriac_arabic/source/readme.htm
+++ b/release/s/syriac_arabic/source/readme.htm
@@ -10,9 +10,8 @@ h2 { font: bold 12pt Tahoma; color: #4444cc }
 </style>
 </head>
 <body>
-<h1 style='margin-bottom: 2px'>Syriac (Arabic layout) Keyboard</h1>
-<p style='margin-top: 2px'><i>&copy; 2007-2018 SIL International</i></p>
-<p>Syriac (Arabic layout) is designed for use with Aramaic, Syriac and related languages. The Syriac (Arabic layout) keyboard is based on standard Syriac keyboards.</p>
+<h1>Syriac (Arabic layout) Keyboard</h1>
+  <p>Syriac (Arabic layout) is designed for use with Aramaic, Syriac and related languages. The Syriac (Arabic layout) keyboard is based on standard Syriac keyboards.</p>
 
 <p>The fonts included with these keyboards have been provided by <a target='_blank' 
 href='http://www.BethMardutho.org/'>Beth Mardutho: The Syriac Institute</a>.</p>
