--- a/release/s/syriac_arabic/source/welcome/welcome.htm
+++ b/release/s/syriac_arabic/source/welcome/welcome.htm
@@ -84,8 +84,8 @@ table.display { border-collapse: collapse; }
     </style>
 </head>
 <body>
-<h1 style='margin-bottom: 2px'>Syriac (Arabic layout) Keyboard</h1>
-<p style='margin-top: 2px'><i>&copy; 2007-2018 SIL International</i></p>
+<h1>Syriac (Arabic layout) Keyboard</h1>
+
 <p>The Syriac (Arabic layout) keyboard is based on standard Syriac keyboards.</p>
 
 <h2>Fonts</h2>
