Update some keyboards to update language tags

--- a/release/g/geezbrhan/source/readme.htm
+++ b/release/g/geezbrhan/source/readme.htm
@@ -21,7 +21,7 @@ QWERTY (ቅወርትይ) keyboard. This means that the acting keyboard requires 
 keyboard-mode according to the US standard model. 
 </p>
 
-<p>Copyright © 2021 Fr. Berhanemeskel M. Embaye OFM Cap.</p>
+<p>Copyright © Fr. Berhanemeskel M. Embaye OFM Cap.</p>
 
 </body>
 </html>
