[khmer_angkor] update font

--- a/release/k/khmer_angkor/source/readme.htm
+++ b/release/k/khmer_angkor/source/readme.htm
@@ -17,7 +17,7 @@
     With the users' pitfall in typing Khmer words in mind, Khmer Angkor focuses on the unification of the character orders and spelling rules. These make Khmer Angkor uniquely different from any other keyboards. Khmer Angkor's keyboard layouts were adopted from NiDA keyboard which is widely used at the present.
 </p>
 
-<p>© SIL International</p>
+<p>© SIL Global</p>
 
 </body>
 </html>
