--- a/release/kreative/kreative_superlatin/source/welcome.htm
+++ b/release/kreative/kreative_superlatin/source/welcome.htm
@@ -506,7 +506,7 @@
 			<tr><td class="center">.</td><td class="center">˛</td><td>ogonek</td><td>next to cedilla</td></tr>
 			<tr><td class="center">/</td><td class="center">⁄</td><td>stroke</td><td>slash resembles stroke</td></tr>
 		</table>
-		<p>© 2014-2022 Kreative Software</p>
+		<p>© Kreative Software</p>
 		<script>
 			function prep() {
 				var ua = navigator.userAgent || navigator.appVersion;
