--- a/release/sil/sil_cameroon_azerty/source/welcome/welcome.htm
+++ b/release/sil/sil_cameroon_azerty/source/welcome/welcome.htm
@@ -106,7 +106,7 @@
 </ul>
 <p xml:lang="fr">Le Clavier Camerounais est un produit de SIL Cameroun. Pour plus d'infos sur le Claver Camerounais ou la technologie linguistique au Cameroun, veuillez visiter <a href="https://langtechcameroon.info">https://langtechcameroon.info</a>
 </p>
-<p xml:lang="fr" style="text-align: center; font-style: italic;">Copyright 2018-2023 SIL Cameroun</p>
+<p xml:lang="fr" style="text-align: center; font-style: italic;">Copyright (c) SIL Cameroun</p>
 </div>
 </div>
 <!--Ending French-->
@@ -221,7 +221,7 @@
 
 <p xml:lang="en">The Cameroon Keyboard is developed by SIL Cameroon. For more information about the Cameroon Keyboard or Language Technology in Cameroon, see <a href="https://langtechcameroon.info">https://langtechcameroon.info</a>
 </p>
-<p xml:lang="en" style="text-align: center; font-style: italic;">Copyright 2018-2023 SIL Cameroon</p>
+<p xml:lang="en" style="text-align: center; font-style: italic;">Copyright (c) SIL Cameroon</p>
 </div>
 </div>
 <!--Ending English-->
