--- a/release/c/cantonese_telex/source/readme.htm
+++ b/release/c/cantonese_telex/source/readme.htm
@@ -26,7 +26,8 @@
 <p> telegram: https://t.me/cathaylab</p>
 <p> instagram for publisher: cathay_lab2024 </p>
 <p> instagram for Yuẹt Yữ Gwók Yữ Zị program: cantonese_chuquocngu</p>
-
+<p> Dictionary for Cantonese Gwók Yữ Zị粵語國語字字典: <p>
+<a href="https://github.com/Cathaylaboratory/gwokyuzi/blob/main/gwokyuzi.dic.yaml">Dictionary for Cantonese Gwok Yu Zi粵語國語字字典</a>
 <p>© cathaylab</p>
 </body>
 </html>
