[indonesia] Fix touch layout for zxq

--- a/release/i/indonesia/source/welcome.htm
+++ b/release/i/indonesia/source/welcome.htm
@@ -1,11 +1,17 @@
-<?php 
-  $pagename = 'Indonesia Keyboard Help';
-  $pagetitle = 'Indonesia Keyboard Help';
-  require_once('header.php');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Indonesia</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
+</head>
+<body>
 
-
-?>
-
+<h1>Indonesia Keyboard / Papan Ketik Indonesia</h1>
 
 <p>
 To type in Indonesian language. This is a basic keyboard with no special letters. It will also be useful for other languages that do not require special characters.<br />
@@ -26,16 +32,15 @@ Anda dapat berpartisipasi dan memberi masukan kepada pengembang. WA: 0896-9175-9
 And this keyboard tries to stay faithful to the QWERTY keyboards layout that most people familiar with.
 </p>
 <p>
-Website homepage/Situs web: https://github.com/bennylin/keyboards
+Website homepage/Situs web: <a href="https://github.com/bennylin/keyboards">https://github.com/bennylin/keyboards</a>
 </p>
 <p>© Benny Lin</p>
 
 <h2>Desktop Keyboard Layout</h2>
-<div id='osk' data-states='default shift'>
-</div>
+<img src="indonesia.png">
 
 <h2>Mobile/Tablet Keyboard Layout</h2>
-<div id='osk-tablet' data-states='default shift'>
-</div>
+<img src="touch.png">
 
-
+</body>
+</html>
