cantonese telex updating
ready for review

--- a/release/c/cantonese_telex/source/welcome.htm
+++ b/release/c/cantonese_telex/source/welcome.htm
@@ -14,10 +14,10 @@
 <h1>Start Using cantonese telex</h1>
 
 <p>
-    cantonese telex for Yụet Yữ Gwók Yữ Zị (Cantonese). Cantonese Telex粵語國語字輸入法
+    cantonese telex for Yụet Yữ Quók Yữ Zị (Cantonese). Cantonese Telex粵語國語字輸入法
 <p>
    <p> 粵語國語字係一種羅馬化嘅粵語文字 <p>
-      <p> Yuẹt Yữ Gwók Yữ Zị hậi yất zủng lò mã fá gé yuẹt yữ mần zị. <p>
+      <p> Yuẹt Yữ Quók Yữ Zị hậi yất zủng lò mã fá gé yuẹt yữ mần zị. <p>
 <p>
    tone rules: 音調規則<p>
    <p> 對應粵拼嘅第一聲唔使打，第二聲打r，第三聲打s, 第四聲打f，第五聲打x，第六聲打j <p>
@@ -48,9 +48,9 @@
 <p><b>音調tones</b></p>
 <img src='tones.png' alt='Keyboard Layout'>
 
-<p><b>粵語國語字字典Dictionary for Cantonese Gwók Yữ Zị</b></p>
+<p><b>粵語國語字字典Dictionary for Cantonese Quók Yữ Zị</b></p>
 
-<a href="https://github.com/Cathaylaboratory/gwokyuzi/blob/main/gwokyuzi.dic.yaml">粵語國語字字典dictionary for Cantonese Gwok Yu Zi</a>
+<a href="https://github.com/Cathaylaboratory/quokyuzi/blob/main/quokyuzi.dic.yaml">粵語國語字字典dictionary for Cantonese Quok Yu Zi</a>
 
 <!-- <p>See <a href="file:taigi_poj.pdf">this document</a> for all the key combinations.</p> -->
 
