--- a/release/t/taichow/source/readme.htm
+++ b/release/t/taichow/source/readme.htm
@@ -23,5 +23,6 @@
 <p>© cathaylab</p>
 <p> e-mail: goetiansoc@proton.me</p>
 <p> telegram: https://t.me/cathaylab</p>
+<p> instagram: cathay_lab2024</p>
 </body>
 </html>
