synch all welcome and help files

--- a/experimental/mjh/mjh_aligali/source/welcome/welcome.htm
+++ b/experimental/mjh/mjh_aligali/source/welcome/welcome.htm
@@ -15,7 +15,7 @@
 <h1>Start Using MJH Ali Gali</h1>
 
 <p>
-  MJH Ali Gali keyboard.
+  MJH Ali Gali keyboard
 </p>
 
 <h2>Desktop Keyboard layout</h2>
