--- a/experimental/mjh/mjh_hudum/source/welcome/welcome.htm
+++ b/experimental/mjh/mjh_hudum/source/welcome/welcome.htm
@@ -15,18 +15,18 @@
 <h1>Start Using MJH Hudum</h1>
 
 <p>
-  MJH Hudum keyboard.
+  MJH Hudum keyboard
 </p>
 
 <h2>Desktop Keyboard layout</h2>
 <h3>Default (unshifted)</h3>
-<p><a href="001.png"><img class="keyboard" src="001.png" alt="Default (unshifted) state" /></a></p>
+<p><a href="Layout_.png"><img class="keyboard" src="Layout_.png" alt="Default (unshifted) state" /></a></p>
 <h3>Shift</h3>
-<p><a href="002.png"><img class="keyboard" src="002.png" alt="Shift state" /></a></p>
+<p><a href="Layout_S.png"><img class="keyboard" src="Layout_S.png" alt="Shift state" /></a></p>
 <h3>Right ALT (unshifted)</h3>
-<p><a href="003.png"><img class="keyboard" src="003.png" alt="Right ALT (unshifted) state" /></a></p>
-<h3>Shift Right ALT</h3>
-<p><a href="004.png"><img class="keyboard" src="004.png" alt="Shift Right ALT state" /></a></p>
+<p><a href="Layout_RA.png"><img class="keyboard" src="Layout_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+<h3>Shift Right ALT </h3>
+<p><a href="Layout_SRA.png"><img class="keyboard" src="Layout_SRA.png" alt="Shift Right ALT (unshifted) state" /></a></p>
 
 </body>
 </html>
