--- a/experimental/mjh/mjh_sibe/source/welcome/welcome.htm
+++ b/experimental/mjh/mjh_sibe/source/welcome/welcome.htm
@@ -14,9 +14,10 @@
 
 <h1>Start Using MJH Sibe</h1>
 
-<p>
-  MJH Sibe keyboard
-</p>
+<p>  MJH Sibe keyboard</p>
+<p>  - Until this keyboard is finalized, all unassigned keystrokes are filled with placeholder character U+1881 "ᢁ"</p>
+<p>  - This keyboard has been tested with two fonts: Noto Sans Mongolian and Mongolian Baiti</p>
+<p>  - Problems or discussion on this keyboard can be addressed directly to greyson@postone.net</p>
 
 <h2>Desktop Keyboard layout</h2>
 <h3>Default (unshifted)</h3>
