mjh_todo update keystrokes to conform to Kushim Keyboard set

--- a/experimental/mjh/mjh_todo/source/readme.htm
+++ b/experimental/mjh/mjh_todo/source/readme.htm
@@ -14,9 +14,8 @@
 
 <h1>MJH Todo</h1>
 
-<p>
-  MJH Todo keyboard.
-</p>
+<p>  MJH Todo keyboard</p>
+<p>  - Until this keyboard is finalized, all unassigned keystrokes are filled with placeholder character U+1881 "ᢁ"</p>
 
 <p>Copyright © Greg Eck</p>
 
