include images for .php file

--- a/release/d/dakota_smsc/source/welcome/welcome.htm
+++ b/release/d/dakota_smsc/source/welcome/welcome.htm
@@ -256,7 +256,7 @@
         <li>
             <strong>Fonts:</strong>
             <div class="picture">
-                <img src="./CorrectFont.PNG" alt="Mobile Keyboard" style="width: 800px; height: 80px;">
+                <img src="./CorrectFont.png" alt="Mobile Keyboard" style="width: 800px; height: 80px;">
             </div>
         </li>
         <li>
