taigi viet telex updating
ready for review

--- a/release/t/taigi_viet_telex/source/readme.htm
+++ b/release/t/taigi_viet_telex/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Taigi_viet_telex</h1>
 
 <p>
-    Taigi Viet Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī and hàn-bûn漢文
+    Taigi Viet Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī, Tiê-chiu Pe̍h-ūe-jī and hàn-bûn漢文
 </p>
 
 <p>© cathaylab</p>
