--- a/release/t/taigi_viet_telex/source/welcome.htm
+++ b/release/t/taigi_viet_telex/source/welcome.htm
@@ -14,10 +14,10 @@
 <h1>Start Using Taigi Viet Telex</h1>
 
 <p>
-    Taigi Viet Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī and hàn-bûn. 台語越式telex拍字法 會當拍台語白話字佮漢文
+    Taigi Viet Telex for Tâi-gí (Taiwanese) pe̍h-ōe-jī, Tiê-chiu Pe̍h-ūe-jī and hàn-bûn. 台語越式telex拍字法 會使拍台語白話字潮州白話字佮漢文
 </p>
 <p>
-  Taigi Viet Telex version, is using "sfrjwchh" keys for generating tone marks 
+  Taigi Viet Telex version, is using "sfrjwx" keys for generating tone marks 
 </p>
 <p>
     台語越式telex版本，佇咧元音字母後爿抑是佇咧每一個音節後爿添字母‘s’ ‘f’ ‘r’ ‘j’ ‘w’佮‘x’去生成音調 
