foochow keyboard updating
ready for reviewing

--- a/release/f/foochow/source/welcome.htm
+++ b/release/f/foochow/source/welcome.htm
@@ -16,7 +16,7 @@
 <p>
     foochow for east-hokkienese hók-ciŭ-uâ.福州話閩東語羅馬字輸入法
 </p>
-<p> specific letters特殊字母: aa > a̤, oo > o̤, uu > ṳ,ee > e̤, euu > e̤ṳ, enge > e̤ng,ungu > ṳng, eung > e̤ṳng, aeng > ae̤ng </p>
+<p> specific letters特殊字母: aa > a̤, oo > o̤, w > ṳ, uu > ṳ,ee > e̤, euu > e̤ṳ, enge > e̤ng,ungu > ṳng, eung > e̤ṳng, aeng > ae̤ng </p>
 <p>
 tones音調: as > á, af > à, aw > ă, ar > ā, aj > â, ahj > ăh
 </P>
