[sil_nubian] Fix link to Sophia Nubian font in help docs

--- a/release/sil/sil_nubian/source/readme.htm
+++ b/release/sil/sil_nubian/source/readme.htm
@@ -18,7 +18,7 @@ style="PADDING-RIGHT: 25px; PADDING-LEFT: 25px; PADDING-BOTTOM: 25px; MARGIN: 0p
 <A name=intro></A>
       <H2>Introduction</H2>
       <P>This keyboard was developed for keyboarding Nubian languages in the Coptic Script. The 
-      "Nubian (SIL)" keyboard is designed to work with the  <A href="http://scripts.sil.org/SophiaNubian" target=_blank>Sophia Nubian</A> 
+      "Nubian (SIL)" keyboard is designed to work with the  <a href="https://software.sil.org/SophiaNubian" target=_blank>Sophia Nubian</a> 
       font. However, you can use this keyboard with any Coptic  
       Unicode font. </P><A name=kmn></A>
       
