[slp1_deve] Reword description to make it clear this is one keyboard

--- a/release/s/slp1_deva/source/welcome.htm
+++ b/release/s/slp1_deva/source/welcome.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Sanskrit Library Phonetic ASCII (SLP1)</title>
+        <title>slp1_deva</title>
         <style type="text/css">
             p {
                 font: 10pt Tahoma;
@@ -20,10 +20,10 @@
         </style>
     </head>
     <body>
-        <h1>Sanskrit Library Phonetic ASCII (SLP1) (Sanskrit language)</h1>
+        <h1>slp1_deva</h1>
 
         <p>
-            The Sanskrit Library Phonetic ASCII package includes two keyboards:
+            The slp1_deva keyboard is one of two keyboards that are a part of The Sanskrit Library Phonetic ASCII package:
             one to enter Devanagari Unicode, the other to enter Roman Unicode
             with diacritics. These include all accents required for The R̥gveda.
             Both keymaps follow the Sanskrit Library ASCII encoding described in
@@ -35,7 +35,7 @@
             obtained by wrapping the character sequence in curly brackets.
             Contacts: info@sanskritlibrary.org
         </p>
-
+        <p>This particular keyboard supports the Devanagari script.</p>
         <p>© The Sanskrit Library</p>
     </body>
 </html>
