[slp1_roman] Revisions on behalf of author

--- a/release/s/slp1_roman/source/welcome.htm
+++ b/release/s/slp1_roman/source/welcome.htm
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Sanskrit Library Phonetic ASCII (SLP1)</title>
+        <title>Start Using slp1_roman</title>
         <style type="text/css">
             p {
                 font: 10pt Tahoma;
@@ -20,14 +20,15 @@
         </style>
     </head>
     <body>
-        <h1>Sanskrit Library Phonetic ASCII (SLP1) (Sanskrit language)</h1>
+        <h1>Start Using slp1_roman</h1>
 
         <p>
-            The Sanskrit Library Phonetic ASCII package includes two keyboards:
+            The slp1_roman keyboard is one of two keyboards that are a part of The Sanskrit Library Phonetic ASCII package:
             one to enter Roman Unicode with diacritics, the other to enter
             Devanagari Unicode. These include all accents required for The
             R̥gveda. Both keymaps follow the Sanskrit Library ASCII encoding
-            described in brief at https://sanskritlibrary.org/help-text.html,
+            described in brief at 
+            <a href="https://sanskritlibrary.org/help-text.html">https://sanskritlibrary.org/help-text.html</a>            ,
             and in full in Linguistic Issues in Encoding Sanskrit, Appendix B
             available in a PDF linked to at the bottom of that webpage. The
             Romanization followed in the slp1_roman keyboard is ISO 15919 except
@@ -35,6 +36,7 @@
             characters are obtained by wrapping the character sequence in curly
             brackets. Contacts: info@sanskritlibrary.org
         </p>
+        <p>This particular keyboard supports the Latin script.</p>
 
         <p>© The Sanskrit Library</p>
     </body>
