--- a/experimental/k/khmer_ldml/source/readme.htm
+++ b/experimental/k/khmer_ldml/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start Using khmer_test</title>
+  <title>khmer_ldml</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,15 +12,13 @@
 </head>
 <body>
 
-<h1>Start Using khmer_test</h1>
+<h1>khmer_ldml</h1>
 
 <p>
   for Khmer script
 </p>
 
-<h1>Keyboard Layout</h1>
-
-<!-- Insert Keyboard Layout Images or HTML here -->
+<p>Copyright © nyny</p>
 
 </body>
 </html>
