[versions] Fix versioning for several keyboards

--- a/release/u/udi_keyboard/source/readme.htm
+++ b/release/u/udi_keyboard/source/readme.htm
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h1>Udi Keyboard</h1>
+<h1>Udi (SIL) Keyboard</h1>
 
 <p>
     This keyboard layout is designed for Udi language of Azerbaijan. It includes an on-screen keyboard which can be viewed by clicking on the Keyman icon and selecting the On-Screen Keyboard menu item.
@@ -19,8 +19,6 @@
 <p>
     Эта раскладка клавиатуры предназначена для языка уди Азербайджана. Он включает в себя экранную клавиатуру, которую можно просмотреть, щелкнув значок Keyman и выбрав пункт меню.	
 </p>
-
-<p>©SIL International (Eurasia)</p>
 
 </body>
 </html>
