--- a/release/u/udi_keyboard/source/welcome/welcome.htm
+++ b/release/u/udi_keyboard/source/welcome/welcome.htm
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Udi Keyboard</title>
+  <title>Udi (SIL) Keyboard</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -52,8 +52,6 @@ href="https://help.keyman.com/troubleshooting/#boxes">troubleshooting guide.</a>
 	<p><a href="Mobile_S.png"><img class="keyboard" src="Mobile_S.png" alt="Mobile Shift state" /></a></p>
 	<h3>Numeric</h3>
 	<p><a href="Mobile_N.png"><img class="keyboard" src="Mobile_N.png" alt="Mobile Numeric state" /></a></p>
-
-<p>© 2020 SIL International (Eurasia)</p>
 
 </body>
 </html>
