--- a/release/b/burushaski_girminas/source/welcome/welcome.htm
+++ b/release/b/burushaski_girminas/source/welcome/welcome.htm
@@ -24,7 +24,8 @@ body,td,th {
 </style> </head>
   <body dir="LTR" lang="en-US">
     <h1 class="style11">Overview</h1>
-    <p><font face="Calibri, sans-serif"><font style="font-size: 18pt; color: #000000;"
+    <p><font face="Calibri, sans-serif"><font style="font-size: 18pt; color: #000000;"
+
           size="5">Burushaski&nbsp; Orthography and Keyboard</font></font></p>
     <p>Burushaski&nbsp; orthography encompasses the spelling and punctuation of
       the Burushaski&nbsp; language. This particular orthography has been
@@ -48,12 +49,14 @@ body,td,th {
             <p class="style11"> </p>
             <h3 class="style11"><a name="desktop"></a>Typing characters with
               Burushaski&nbsp; Girminas Keyboard (Desktop, Laptop) </h3>
-            <p><span class="style11">Please&nbsp; <a href="https://keyman.com/keyboards/burushaski_girminas"
+            <p><span class="style11">Please&nbsp; <a href="https://keyman.com/keyboards/burushaski_girminas"
+
                   target="new">download</a> the Burushaski&nbsp; Girminas for
                 your desktop or laptop and follow the following chart to learn
                 the Burushaski Keyboard and the key combination. <br>
               </span></p>
-            <img src="image_keyboard_guide2.png" alt="Burushaski Girminas Keyboard Layout"
+            <img src="image_keyboard_guide2.png" alt="Burushaski Girminas Keyboard Layout"
+
               title="Burushaski Girminas Keyboard Layout" style="width: 733px; height: 238px;">
             <p>For diacritic vowels with&nbsp;<strong>tilde</strong>, there is
               only one rule -- on your keyboard press tilde (~)&nbsp; followed
@@ -62,7 +65,8 @@ body,td,th {
               situations. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
               &nbsp; &nbsp;&nbsp;</p>
             <br>
-            <table border-bottom="1px" solid="" style="width: 973px; height: 94px;"
+            <table border-bottom="1px" solid="" style="width: 973px; height: 94px;"
+
               cellspacing="4" cellpadding="6">
               <colgroup><col width="64" span="13"> </colgroup>
               <tbody>
@@ -846,15 +850,19 @@ body,td,th {
                 </strong></div>
             </strong>
             <p>&nbsp;.</p>
-            <p><font color="#000000"><font style="font-size: 20pt" size="5"><font
-                    color="#000000"><font style="font-size: 20pt" size="5"><font
-                        face="Calibri"><a name="touch"></a></font></font></font><font
+            <p><font color="#000000"><font style="font-size: 20pt" size="5"><font
+
+                    color="#000000"><font style="font-size: 20pt" size="5"><font
+
+                        face="Calibri"><a name="touch"></a></font></font></font><font
+
                     face="Calibri">Using the keyboard on touch devices </font></font></font></p>
             <p>For android users, please download the Burushaski&nbsp; Girminas
               App from Play Store. Click the link or the icon below to download.
               For the users of other operating system, please read the
               instructions below. </p>
-            <p>&nbsp;Please download here:&nbsp; <a href="https://play.google.com/store/apps/details?id=burushaski.girminas"
+            <p>&nbsp;Please download here:&nbsp; <a href="https://play.google.com/store/apps/details?id=burushaski.girminas"
+
                 title="Buruśaaski Girminas Android App" target="new">Burushaski&nbsp;
                 Girminas</a></p>
             <p>For iPhone and iPad, install the Keyman App from App Store. Once
@@ -863,7 +871,7 @@ body,td,th {
               Girminas. Remember, there is no separate iOS App. <strong>Keyman</strong>
               engine already includes Burushaski&nbsp; Girminas. </p>
             <p>feedback and recommendations are welcomed. </p>
-            <p>Quwat K. Sunny © 2020 -2022</p>
+            <p>© Quwat K. Sunny</p>
           </td>
         </tr>
       </tbody>
