[rac_shina] Fix versioning

--- a/release/rac/rac_shina/source/welcome/welcome.htm
+++ b/release/rac/rac_shina/source/welcome/welcome.htm
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <title>The Rachitrali-Shina Keyman Keyboard Package</title>
+  <meta charset="utf-8">
+  <title>Start Using Rachitrali-Shina</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
-<body style="max-width:600px;">
+<body>
 <h1>The Rachitrali-Shina Keyman Keyboard Package</h1>
       
 
@@ -58,11 +64,6 @@ and selecting the On Screen Keyboard menu item.     </p>
 شینا سافٹ ویر اور شینا ٹیکسٹ ایڈیٹر ایجاد کرنے کا تاریخی کام پاکستان کے ضلع چترال سے تعلق رکھنے والے لسانی ماہر جناب رحمت عزیز چترانی نے شروع کیا ہے۔ اور آج اس سافٹ ویر کے زریعے رحمت عزیز چترالی نے شینا جیسی غیر تحریری زبان کو تحریری زبان میں تبدیل کرکے کمپیوٹر اور موبائل  کی زبان بنا دیا ہے اور شینا بولنے والے لوگ اب فیس بک اور ٹویٹر میں بھی اس سافٹ ویر کے زریعے شینا لکھ رہے ہیں جو کہ شینا دان طبقے کے لیے یقینا بہت بڑی خوشی کی بات ہے
 </p>
 
-
-<h2>Links</h2>
-<ul>
-<li><a href='http://keymankeyboards.com/iso:scl'>Other keyboards for these languages</a></li>
-</ul>
 
 </body>
 </html>
