[farsiman] Update touch layout keycaps and font

--- a/release/f/farsiman/source/welcome/welcome.htm
+++ b/release/f/farsiman/source/welcome/welcome.htm
@@ -46,6 +46,6 @@ To get:
 <h4>Longpress</h4>
 <img width="800px" src="touch_longpress.png">
 
-<p>&copy; 2019 Yuichi Yoshimoto </p>
+<p>&copy; Yuichi Yoshimoto </p>
 </body>
 </html>
