[khmer_ldml] update info

--- a/experimental/k/khmer_ldml/source/readme.htm
+++ b/experimental/k/khmer_ldml/source/readme.htm
@@ -12,13 +12,15 @@
 </head>
 <body>
 
-<h1>khmer_ldml</h1>
+<h1>Khmer LDML keyboard</h1>
 
 <p>
-  for Khmer script
+  This Khmer LDML keyboard is based on the Khmer Angkor keyboard for the Khmer script. 
+  Currently, it is not supported on mobile devices. For full compatibility across all devices, 
+  please refer to the Khmer Angkor keyboard. 
 </p>
 
-<p>Copyright © nyny</p>
+<p>Copyright © SIL Global</p>
 
 </body>
 </html>
