--- a/experimental/k/khmer_ldml/source/welcome.htm
+++ b/experimental/k/khmer_ldml/source/welcome.htm
@@ -12,15 +12,18 @@
 </head>
 <body>
 
-<h1>Start Using khmer_ldml</h1>
+<h1>Start Using Khmer LDML keyboard</h1>
 
 <p>
-  for Khmer script
+  This Khmer LDML keyboard is based on the Khmer Angkor keyboard for the Khmer script. 
+  Currently, it is not supported on mobile devices. For full compatibility across all devices, 
+  please refer to the Khmer Angkor keyboard. 
 </p>
 
 <h1>Keyboard Layout</h1>
 
 <!-- Insert Keyboard Layout Images or HTML here -->
+ <image src="OSK.png" alt="keyboard OSK" width="500px"></image>
 
 </body>
 </html>
