[nlci_tamil_winscript] Add ability to type nukta

--- a/release/nlci/nlci_tamil_winscript/source/welcome/welcome.htm
+++ b/release/nlci/nlci_tamil_winscript/source/welcome/welcome.htm
@@ -162,6 +162,10 @@
         </tbody>
     </table>
 
+    <h3>Nukta</h3>
+
+    <p> <kbd>f</kbd> is used for nukta Eg <kbd>k</kbd> <kbd>f</kbd> will generate <samp>க𑌼</samp>, and <kbd>k</kbd> <kbd>o</kbd> <kbd>o</kbd> <kbd>f</kbd> will generate <samp>க𑌼ோ</samp></p>
+
     <h3>Virama</h3>
 
     <p> <kbd>X</kbd> is used as virama Eg <kbd>k</kbd> <kbd>X</kbd> <kbd>L</kbd> will generate <samp>க்‌ள</samp></p>
