--- a/experimental/t/tengwar/source/readme.htm
+++ b/experimental/t/tengwar/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Tengwar</h1>
 
 <p>
-  Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net
+  Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net. This keyboard is using Private Use Area codepoints since Tengwar is not in Unicode.
 </p>
 
 <p>Copyright © 3ubaidUrRe7man</p>
