--- a/experimental/t/tengwar/source/welcome.htm
+++ b/experimental/t/tengwar/source/welcome.htm
@@ -15,7 +15,7 @@
 <h1>Start Using Tengwar</h1>
 
 <p>
-  Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net
+  Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net. This keyboard is using Private Use Area codepoints since Tengwar is not in Unicode.
 </p>
 
 <h1>Keyboard Layout</h1>
