--- a/experimental/t/tengwar_quenya/source/welcome.htm
+++ b/experimental/t/tengwar_quenya/source/welcome.htm
@@ -18,13 +18,23 @@
   Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net. This keyboard is using Private Use Area codepoints since Tengwar is not in Unicode.
 </p>
 
-<h1>Keyboard Layout</h1>
+<h2>Desktop Keyboard Layout</h2>
 
-<!-- Insert Keyboard Layout Images or HTML here -->
-<img src="help/typing-guide-desktop.png" alt="" srcset=""></br>
-<img src="help/typing-guide-desktop-shifted.png" alt="" srcset=""></br>
-<img src="help/typing-guide-desktop-alternate.png" alt="" srcset=""></br>
-<img src="help/typing-guide-desktop-alternate-shifted.png" alt="" srcset="">
+    <img src="keyboard_layout.png" alt="Keyboard Layout" srcset=""><br>
+    <img src="keyboard_layout_shifted.png" alt="Shift Keyboard Layout" srcset=""><br>
+    <img src="keyboard_layout_alt.png" alt="" srcset="Alt Keyboard Layout"><br>
+    <img src="keyboard_layout_alt-shift.png" alt="Alt-Shift Keyboard Layout" srcset=""><br>
+    <p>
+        This keyboard follows Dvorak for Programmers keyboard layout.
+    </p>
+
+    <h2>Mobile Keyboard Layout</h2>
+
+    <img src="mobile_keyboard_layout.jpg" alt="Mobile Keyboard Layout" srcset=""><br>
+    <img src="mobile_layout_numbers.jpg" alt="Mobile Keyboard Layout (Numbers)" srcset="">
+    <p>
+        This keyboard uses the same layout as the desktop layout. While characters in desktop shift, alt and alt-shift are available at long press. 
+    </p>
 
 </body>
 </html>
