refactor keyboard rules and apply Padauk

--- a/release/sil/sil_mon/source/readme.htm
+++ b/release/sil/sil_mon/source/readme.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mon Phonetic</title>
+  <title>Mon (SIL)</title>
   <style type="text/css">
     p { font: 10pt Tahoma; }
     h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
@@ -12,13 +12,13 @@
 </head>
 <body>
 
-<h1>Mon Phonetic</h1>
+<h1>Mon (SIL)</h1>
 
 <p>
-  Mon Phonetic Keyboard
+  Mon (SIL) Keyboard is designed for typing Mon using Myanmar characters.
 </p>
 
-<p>Copyright ©</p>
+<p>Copyright © SIL Global</p>
 
 </body>
 </html>
