[khmer_angkor] change fonts and update documents

--- a/release/k/khmer_angkor/source/welcome/welcome.htm
+++ b/release/k/khmer_angkor/source/welcome/welcome.htm
@@ -16,6 +16,8 @@
 	Here is the keyboard layout:
 </p>
 
+<h2>Desktop Layout –Windows/macOS</h2>
+
 <img width="100%" src="keyboard_layout.png">
 <img width="100%" src="image002.png">
 
@@ -25,6 +27,25 @@
 <p><center><b>Consonant + Subscript(s) + Consonant Shifter + Vowel + Diacritic</b></center></p>
 
 <p>For more details on the Khmer Angkor Keyboard, please find the documentation included in this package.</p> 
+
+<h2>Touch Layout –Android/iOS</h2>
+<p>
+    With the latest upgrade to touch layouts, Khmer Angkor keyboard now supports new gestures on touch devices. You can down-flick a key to access its corresponding ceong or vowel. Also, you can still long-press certain keys to reveal symbols or special characters. For more info on each layout, please take a look at the document below. 
+</p>
+
+<p>Default layout</p>
+<img src="image/default.png" alt="default" width="60%">
+
+<p>Shift layout with down-flick gesture</p>
+<img src="image/shift_flick.png" alt="shift_with_flick" width="60%">
+
+<p>Khmer numeric layout</p>
+<img src="image/khmer_number.png" alt="khmer_numeric" width="60%">
+
+<p>Number layout with longpress gesture</p>
+<img src="image/number_longpress.png" alt="number_with_longpress" width="60%">
+
+
 
 <h1>Keyboard Documentations</h1>
 <p>For the documentation in English, click <a href="KAK_Documentation_EN.pdf">here</a>.</p> 
@@ -40,9 +61,6 @@
 </ul>
 
 <h3>More Information</h3>
-<p style="text-align: justify;">
-
-</p>
 
 <ul style="list-style-type:circle">
     <li><a href="http://unicode.org/charts/PDF/U1780.pdf">Khmer character chart</a></li>
