--- a/release/k/khmer_angkor/source/welcome/welcome.htm
+++ b/release/k/khmer_angkor/source/welcome/welcome.htm
@@ -30,8 +30,13 @@
 
 <h2>Touch Layout –Android/iOS</h2>
 <p>
-    With the latest upgrade to touch layouts, Khmer Angkor keyboard now supports new gestures on touch devices. You can down-flick a key to access its corresponding ceong or vowel. Also, you can still long-press certain keys to reveal symbols or special characters. For more info on each layout, please take a look at the document below. 
+With the latest upgrade to touch layouts, Khmer Angkor keyboard now supports new gestures on touch devices:
 </p>
+<ul>
+<li>You can down-flick a key to access its corresponding coeng consonants or vowel.</li>
+<li>The Shift key has been brought back to access additional letters, reflecting the NiDA desktop layout.</li>
+<li>You can still long-press certain keys to reveal symbols or special characters. For more info on each layout, please take a look at the document below.</li>
+</ul>
 
 <p>Default layout</p>
 <img src="image/default.png" alt="default" width="60%">
