[irula_tamil_winscript] New keyboard for Irula

--- a/experimental/i/irula_tamil_winscript/source/welcome/welcome.htm
+++ b/experimental/i/irula_tamil_winscript/source/welcome/welcome.htm
@@ -89,6 +89,8 @@
 	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
+	<h3>Alt</h3>
+	<p><a href="LayoutU_A.png"><img class="keyboard" src="LayoutU_A.png" alt="Alt state" /></a></p>
 	
 	 <table class="inputSequences">
 	 <h3>Special cases</h3>
