[kvk_fixes] Address missing .kvk files in .kps

--- a/release/itrans/itrans_roman/source/readme.htm
+++ b/release/itrans/itrans_roman/source/readme.htm
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
 <title>Indic Romanization from ITRANS</title>
+<style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
 <body>
-<style>body {background: #FFCC99;}a {text-decoration: none;}</style>
 
-<h2><span style="color: chocolate;">Indic Romanization from ITRANS</span> Keyboard Version 1.0.0</h2>
+<h2>Indic Romanization from ITRANS</h2>
+
 <p>This is a phonetic keyboard for Indic Romanization which is based on  
 <strong><a href="https://www.aczoom.com/itrans/">ITRANS</a></strong> 
 transliteration scheme with some modifications for input. 7bit ISO scheme
