--- a/release/rac/rac_wakhi/source/welcome/welcome.htm
+++ b/release/rac/rac_wakhi/source/welcome/welcome.htm
@@ -1,13 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta charset="utf-8">
   <title>The RAChitrali-Wakhi Keyman Keyboard Package</title>
+  <style type="text/css">
+    p { font: 10pt Tahoma; }
+    h1 { font: bold 16pt Tahoma; color: #4444cc; margin-bottom: 2px }
+    h2 { font: bold 12pt Tahoma; color: #4444cc; }
+  </style>
 </head>
-<body style="max-width:600px;">
-<h1>The RAChitrali-Wakhi Keyman Keyboard Package</h1>
-      <P><SPAN class=author_date_hits>Rehmat Aziz Chitrali, 
-      2018-06-06</SPAN></P>
-
+<body>
+	<h1>Start Using RAChitrali-Wakhi</h1>
 <h2>Introduction</h2>
 <p>This keyboard is designed by Rehmat Aziz Chitrali Linguist and Researcher at Khowar Academy Chitral, Khyber Pakhtunkhwa of Pakistan for the Wakhi language spoken in Gilgit-Baltistan and Chitral of Northern Pakistan. It is based on phonetic keyboard for Wakhi Language 
 developed by Pakistani linguist, author, researcher and Software Developer Mr.Rehmat Aziz Chitrali for 
@@ -75,39 +78,7 @@ and selecting the On Screen Keyboard menu item.     </p>
 وخی سافٹ ویر اور وخی ٹیکسٹ ایڈیٹر ایجاد کرنے کا تاریخی کام پاکستان کے ضلع چترال سے تعلق رکھنے والے لسانی ماہر جناب رحمت عزیز چترانی نے شروع کیا ہے۔ اور آج اس سافٹ ویر کے زریعے رحمت عزیز چترالی نے وخی جیسی غیر تحریری زبان کو تحریری زبان میں تبدیل کرکے کمپیوٹر اور موبائل کی زبان بنا دیا ہے اور وخی بولنے والے لوگ اب فیس بک اور ٹویٹر میں بھی اس سافٹ ویر کے زریعے وخی لکھ رہے ہیں جو کہ وخی دان طبقے کے لیے یقینا بہت بڑی خوشی کی بات ہے
 </p>
 
-      <P class=Caption></P><A name=license></A>
-      <H2>License</H2>
-      <P>RAChitrali-Wakhi Keyman Keyboard is copyright © 2018 Rehmat Aziz Chitrali. 
-      	It is distributed under The MIT License (MIT)</P>
-      <DIV class=Note>
-<p>Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:</p>
 
-<p>The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.</p>
-
-<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.</p></DIV>
-
-
-
-<h2>Release History</h2>
-<p>Version 1.0, released 06 June 2018</p>
-
-<h2>Links</h2>
-<ul>
-<li>Home Page: <a href='http://keymankeyboards.com'>http://keymankeyboards.com/</a></li>
-<li><a href='http://keymankeyboards.com/iso:wbl'>Other keyboards for these languages</a></li>
-</ul>
 
 </body>
 </html>
