--- a/release/e/easy_arabic/source/welcome.htm
+++ b/release/e/easy_arabic/source/welcome.htm
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>Start Using Easy Arabic Keyboard</h1>
+<h1>Start Using Easy Arabic /h1>
 
 <p>
   Changes some keys to make it easier to type.
@@ -21,6 +21,10 @@
 <h1>Keyboard Layout</h1>
 
 <!-- Insert Keyboard Layout Images or HTML here -->
+ <img src="help/layout.png" alt="" srcset=""><br>
+ <img src="help/layout-shifted.png" alt="" srcset=""><br>
+ <img src="help/layout-alternate.png" alt="" srcset=""><br>
+ <img src="help/layout-alternate-shifted.png" alt="" srcset="">
 
 </body>
 </html>
