--- a/experimental/t/tengwar_quenya/source/readme.htm
+++ b/experimental/t/tengwar_quenya/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Tengwar</h1>
 
 <p>
-  Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net. This keyboard is using Private Use Area codepoints since Tengwar is not in Unicode.
+  Tengwar Keyboard--As seen on https://freetengwar.sourceforge.net. This keyboard is using Private Use Area codepoints since Tengwar is not in Unicode. <b>This keyboard follows Dvorak for Programmers keyboard layout.</b> The character at Number 8 is a Zero Width Joiner used to join ‍.
 </p>
 
 <p>Copyright © 3ubaidUrRe7man</p>
