[tuareg_tifinagh] Update Akatab font and keyboard

--- a/release/shared/fonts/sil/akatab/web/Akatab-webfont-example.html
+++ b/release/shared/fonts/sil/akatab/web/Akatab-webfont-example.html
@@ -3,12 +3,12 @@
 <!--
 Akatab-webfont-example.html
 Akatab
-This file is part of Akatab font family (http://software.sil.org/Akatab)
-and is Copyright (c) 2010-2023 SIL International (http://www.sil.org/),
+This file is part of Akatab font family (https://software.sil.org/Akatab)
+and is Copyright (c) 2010-2025 SIL International (https://www.sil.org/),
 with Reserved Font Names "Akatab". This Font Software is licensed
 under the SIL Open Font License, Version 1.1. You should have received a copy
 of the license along with this Font Software. If this is not the case, go to
-(http://scripts.sil.org/OFL) for all the details including a FAQ.
+(https://openfontlicense.org) for all the details including a FAQ.
 -->
 <head>
     <meta charset="utf-8">
@@ -52,7 +52,7 @@ of the license along with this Font Software. If this is not the case, go to
 
 <h2>Tifinagh characters, ligatures and variants</h2>
 <p><strong>Akatab default Tifinagh characters </strong><br>
- ⴰ ⴱ ⴳ ⴴ ⴶ ⴷ ⴸ ⴹ ⴼ ⴾ ⵀ ⵂ ⵆ ⵈ ⵉ ⵋ ⵌ ⵍ ⵎ ⵏ ⵐ ⵑ ⵓ ⵔ ⵗ ⵘ ⵙ ⵛ ⵜ ⵟ ⵢ ⵣ ⵤ ⵧ ⵰ &#x25cc;&#x2D7F; </p>
+ ⴰ ⴱ ⴲ ⴳ ⴴ ⴵ ⴶ ⴷ ⴸ ⴹ ⴺ ⴻ ⴼ ⴽ ⴾ ⴿ ⵀ ⵁ ⵂ ⵃ ⵄ ⵅ ⵆ ⵇ ⵈ ⵉ ⵊ ⵋ ⵌ ⵍ ⵎ ⵏ ⵐ ⵑ ⵒ ⵓ ⵔ ⵕ ⵖ ⵗ ⵘ ⵙ ⵚ ⵛ ⵜ ⵝ ⵞ ⵟ ⵠ ⵡ ⵢ ⵣ ⵤ ⵥ ⵦ ⵧ  ⵯ ⵰ &#x25cc;&#x2D7F; </p>
 
 <p><strong>Akatab default Tifinagh bi-consonants </strong><br>
 (Ligatures based on default characters) <br>
@@ -179,7 +179,16 @@ of the license along with this Font Software. If this is not the case, go to
 <p style="font-size:13px; ">Note: The list of variants above is not exhaustive. See the documentation folder for a complete listing of glyphs in Akatab.</p>  
 
 
-<h3>Akatab right-to-left example</h3>
+<p><strong>Showing Akatab Neo-Tifinagh (IRCAM) characters </strong> (Character Variant 18) </p>
+<p><span class=cv18>ⴰ ⴱ ⴳ ⴳⵯ ⴷ ⴹ ⴻ ⴼ ⴽ ⴽⵯ ⵀ ⵃ ⵄ ⵅ ⵇ ⵉ ⵊ ⵍ ⵎ ⵏ ⵓ ⵔ ⵕ ⵖ ⵙ ⵚ ⵛ ⵜ ⵝ ⵞ ⵟ ⵡ ⵢ ⵣ ⵥ</span></p>
+
+<p> UDHR Article 1 Neo-Tifinagh text </p>
+<p><span class=cv18>ⴰⵔ ⴷ ⵜⵜⵍⴰⵍⴰⵏ ⵎⵉⴷⴷⵏ ⴳⴰⵏ ⵉⵍⴻⵍⵍⵉⵜⵏ ⵎⴳⴰⴷⴷⴰⵏ ⵖ ⵡⴰⴷⴷⵓⵔ ⴷ <br>
+ⵉⵣⵔⴼⴰⵏ, ⵢⵉⵍⵉ ⴰⴽⵯ ⴷⴰⵔⵙⵏ ⵓⵏⵍⵍⵉ ⴷ ⵓⴼⵔⴰⴽ, ⵉⵍⵍⴰ ⴼⵍⵍⴰ ⵙⵏ ⴰⴷ <br>
+ⵜⵜⵎⵢⴰⵡⴰⵙⵏ ⵏⴳⵔⴰⵜⵙⵏ ⵙ ⵜⴰⴳⵎⴰⵜ.</span></p>
+
+
+<h2>Akatab right-to-left example</h2>
 
 <p>
 <strong>The following text demonstrates Tifinagh left-to-right behaviour:</strong> ⵙⵏⵜⵜ ⵜⵙⴾⵍⵏ ⵓⵔ ⵜⴶⵂⵏⵜ ⵎⵉ 
