--- a/release/w/winchus/source/welcome/welcome.htm
+++ b/release/w/winchus/source/welcome/welcome.htm
@@ -445,7 +445,7 @@
                         <td><kbd>Mayús</kbd> + <kbd>&gt;</kbd> + <kbd>Mayús</kbd> + <kbd>&gt;</kbd></td>
                     </tr>
                     <tr>
-                        <td><kbd class="kbd-resultado">&lt;</kbd> <kbd class="kbd-resultado">&gt;</kbd></td>
+                        <td><kbd class="kbd-resultado">‹</kbd> <kbd class="kbd-resultado">›</kbd></td>
                         <td><kbd>&lt;</kbd> + <kbd>&lt;</kbd> + <kbd>&lt;</kbd></td>
                         <td><kbd>Mayús</kbd> + <kbd>&gt;</kbd> + <kbd>Mayús</kbd> + <kbd>&gt;</kbd> + <kbd>Mayús</kbd> + <kbd>&gt;</kbd></td>
                     </tr>
