[jerriais] add on screen keyboard, minor changes

--- a/experimental/j/jerriais/source/welcome/welcome.htm
+++ b/experimental/j/jerriais/source/welcome/welcome.htm
@@ -57,7 +57,7 @@
 <ul>
   <li>vowel followed by two single quotes ('') creates an acute accent: <code>e'' = é</code></li>
   <li>vowel followed by two backticks (``) creates a grave accent: <code>a`` = à</code></li>
-  <li>vowel (or "y") followed by a caret (^) creates a circumflex: <code>o^ = ô</code></li>
+  <li>vowel (or "y") followed by two carets (^^) creates a circumflex: <code>o^^ = ô</code></li>
   <li>vowel followed by two double quotes ("") creates a diaresis: <code>i"" = ï</code></li>
   <li>a "c" followed by two commas (,,) creates a cedilla: <code>c,, = ç</code></li>
 </ul>
