--- a/experimental/a/adinkra/source/readme.htm
+++ b/experimental/a/adinkra/source/readme.htm
@@ -15,7 +15,7 @@
 <h1>Adinkra</h1>
 
 <p>
-  Adinkra Alphabet for Ghanaian languages of Akan, Ewe, Ga and Dagbani.
+  This keyboard is designed for the Adinkra Alphabet for Ghanaian languages of Akan, Ewe, Ga and Dagbani. It is using a custom encoding.
 </p>
 
 <p>Copyright © Adinkra Alphabet</p>
