--- a/experimental/a/adinkra/source/welcome.htm
+++ b/experimental/a/adinkra/source/welcome.htm
@@ -15,11 +15,14 @@
 <h1>Start Using Adinkra</h1>
 
 <p>
-  Adinkra Alphabet for Ghanaian languages of Akan, Ewe, Ga and Dagbani.
+  This keyboard is designed for the Adinkra Alphabet for Ghanaian languages of Akan, Ewe, Ga and Dagbani. It is using a custom encoding.
 </p>
 
 <h1>Keyboard Layout</h1>
 
+  <p>
+  The On-screen keyboard will allow you to know which keys to type.
+  </p>
 <!-- Insert Keyboard Layout Images or HTML here -->
 
 </body>
