taigi viet telex updating

--- a/release/t/taigi_viet_telex/source/welcome.htm
+++ b/release/t/taigi_viet_telex/source/welcome.htm
@@ -33,6 +33,8 @@
     <p> nn > ⁿ , oo > o͘, q > o͘, w > ṳ, v > o̤</p>
   <p>  拍兩次字母，取消音調，產生原本ê字母 doubletaping leads to generate original letters: </p>
     <p> 例example: fijj > fij,  kannn > kann, laww > law, beee > bee
+      <p>  拍字母Z，取消音調轉換 Press Z key to cancel the tones: </p>
+      <p> 例example: taifz > tai, girz > gi </p>
   <p>  拍TAB, 産生漢文 press TAB, to generate Kanji </p>
     <p> tâi gí + TAB > 台語
 </p>
