--- a/release/m/mingrelian_cyrillic/source/readme.htm
+++ b/release/m/mingrelian_cyrillic/source/readme.htm
@@ -14,10 +14,8 @@
 <h1>Mingrelian Cyrillic</h1>
 
 <p>
-    Mingrelian Cyrillic keyboard.
+    Mingrelian Cyrillic is a Cyrillic keyboard for the Mingrelian language in Georgia.
 </p>
-
-<p>© SIL Global</p>
 
 </body>
 </html>
