--- a/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
+++ b/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
@@ -14,7 +14,7 @@
 <h1>Start Using Mingrelian Cyrillic</h1>
 
 <p>
-    Mingrelian Cyrillic keyboard.
+    Mingrelian Cyrillic is a Cyrillic keyboard for the Mingrelian language in Georgia.
 </p>
 
 <h1>Keyboard Layout</h1>
@@ -27,8 +27,6 @@
 	<h3>Right ALT (unshifted)</h3>
 	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
 
-
-<p>© SIL GlobaL</p>
 
 </body>
 </html>
