--- a/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
+++ b/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
@@ -25,7 +25,7 @@
 	<h3>Shift</h3>
 	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
 	<h3>Right ALT (unshifted)</h3>
-	<p><a href="LayoutU_RA.png"><img class="keyboard" src="LayoutU_RA.png" alt="Right ALT (unshifted) state" /></a></p>
+	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Right ALT state" /></a></p>
 
 
 </body>
