--- a/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
+++ b/release/m/mingrelian_cyrillic/source/welcome/welcome.htm
@@ -21,11 +21,11 @@
 
   <h2>Desktop Keyboard layout</h2>
 	<h3>Default (unshifted)</h3>
-	<p><a href="LayoutU_.png"><img class="keyboard" src="LayoutU_.png" alt="Default (unshifted) state" /></a></p>
+	<p><a href="mingrelian_cyrillicU_.png"><img class="keyboard" src="mingrelian_cyrillicU_.png" alt="Default (unshifted) state" /></a></p>
 	<h3>Shift</h3>
-	<p><a href="LayoutU_S.png"><img class="keyboard" src="LayoutU_S.png" alt="Shift state" /></a></p>
-	<h3>Right ALT (unshifted)</h3>
-	<p><a href="LayoutU_SRA.png"><img class="keyboard" src="LayoutU_SRA.png" alt="Right ALT state" /></a></p>
+	<p><a href="mingrelian_cyrillicU_S.png"><img class="keyboard" src="mingrelian_cyrillicU_S.png" alt="Shift state" /></a></p>
+	<h3>Right ALT (shifted)</h3>
+	<p><a href="mingrelian_cyrillicU_SRA.png"><img class="keyboard" src="mingrelian_cyrillicU_SRA.png" alt="Right ALT Shift state" /></a></p>
 
 
 </body>
